--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
  </style>
 </head>
 <body>
- <h1>Трубинов Тимофей Сергеевич</h1>
+ <h1><font size="6" color="#220926" face="serif">Трубинов Тимофей Сергеевич</font></h1>
  <p>Контактная информация:</p>
  <ul>
   <li>Телефон: +79529905973</li>
@@ -18,9 +18,9 @@
   <li>GitHub: https://github.com/CEhresmann</li>
   <li>Местоположение: Калининградская обл., Калининград</li>
  </ul>
- <h2>НАВЫКИ</h2>
+ <h2><font size="5" color="#220926" face="serif">Навыки</font></h2>
  <ul>
-  <li>Языки программирования: GO, синтаксис С-подобных языков (С++)</li>
+  <li>Языки программирования: GO, язык С</li>
   <li>Базы данных: SQL</li>
   <li>СУБД: PostgreSQL, MySQL</li>
   <li>ООП, REST API, CI/CD</li>
@@ -28,7 +28,7 @@
   <li>Английский B2, навыки чтения технической документации и специализированной литературы</li>
   <li>Коммуникабельность</li>
  </ul>
- <h2>ОПЫТ РАБОТЫ</h2>
+ <h2><font size="5" color="#220926" face="serif">Опыт работы</font></h2>
  <ul>
   <li>
    <h3>ДвериЛэнд, г. Смоленск – системный администратор</h3>
@@ -39,29 +39,30 @@
     <li>Обслуживание рабочей техники</li>
    </ul>
   </li>
-  <li>
   </li>
  </ul>
- <h2>ОБРАЗОВАНИЕ</h2>
+ <h2><font size="5" color="#220926" face="serif">Образование</font></h2>
  <ul>
   <li>
-   <h3>БФУ им. И. Канта, Калининград – бакалавриат</h3>
-   <p>Философский факультет, 2 курс</p>
-   <p>2022 - 2026</p>
+   <h3>БФУ им. И. Канта, Калининград – бакалавриат, 3 курс, 2022-2026</h3>
   </li>
  </ul>
- <h2>ЛИТЕРАТУРА И КУРСЫ</h2>
+ <h2><font size="5" color="#220926" face="serif">Литература и курсы</font></h2>
  <ul>
   <li>Продвинутые алгоритмы и структуры данных, Марчелло Ла Рокка</li>
-  <li>Get Programming with Go, N. Youngman</li>
+  <li>Язык программирования Go, Б. Керниган, Алан О.Донован</li>
+  <li>Язык программирования Си, Б. Керниган, Денис Ритчи</li>
+  <li>Теоритический минимум по computer scince (сети, криптография и data science), Владстон Ф.Фило</li>
   <li>Algorithms + data structures = programs, Writh Niklaus</li>
   <li>Прикладная логика, Н. Н. Непейвода</li>
   <li>Приемы объектно-ориентированного проектирования. Паттерны проектирования, Гамма Эрих</li>
   <li>Летняя школа от ВШЭ “Логика и формальная философия”</li>
+  <li>Школа21 от сбербанка, основное обучение</li>
+  <li>PTStart от Positive technologies</li>
   <li>Полугодовой курс от ВШЭ “Введение в эпистемическую логику и формальную эпистемологию”</li>
   <li>A tour of GO</li>
   <li>Go documentation</li>
-  <li>Документация С++</li>
+  <li>Документация языка С</li>
  </ul>
 </body>
 </html>
