--- a/index.html
+++ b/index.html
@@ -2,95 +2,35 @@
 <html>
 <head>
   <title>Резюме</title>
-  <style>
-    /* Global styles */
-    body {
-      font-family: 'Times New Roman', sans-serif;
-      margin: 20px;
-      background-color: #f9f9f9; /* added a light gray background */
-    }
-
-    /* Header styles */
-    h1 {
-      font-size: 36px;
-      color: #220926;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-
-    /* Section styles */
-    h2 {
-      font-size: 24px;
-      color: #220926;
-      font-weight: bold;
-      margin-top: 20px;
-      margin-bottom: 10px;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    li {
-      margin-bottom: 10px;
-    }
-
-    /* Contact info styles */
-    .contact-info {
-      font-size: 18px;
-      color: #666;
-    }
-
-    /* Work experience styles */
-    .work-experience {
-      margin-top: 20px;
-    }
-
-    .work-experience h3 {
-      font-size: 20px;
-      color: #220926;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-
-    .work-experience ul {
-      margin-top: 10px;
-    }
-
-    /* Education styles */
-    .education {
-      margin-top: 20px;
-    }
-
-    .education h3 {
-      font-size: 20px;
-      color: #220926;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-
-    /* Literature and courses styles */
-    .literature-and-courses {
-      margin-top: 20px;
-    }
-
-    .literature-and-courses ul {
-      columns: 2; /* added a two-column layout for literature and courses */
-      column-gap: 20px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css"> <!-- link to the provided CSS file -->
+  <meta property="og:title" content="Трубинов Тимофей Сергеевич" />
+  <meta property="og:description" content="Контактная информация:" />
+  <meta property="og:image" content="https://github.com/CEhresmann.png" /> <!-- GitHub profile picture -->
+  <meta property="og:url" content="https://github.com/CEhresmann" /> <!-- GitHub profile URL -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Трубинов Тимофей Сергеевич" />
+  <meta name="twitter:description" content="Контактная информация:" />
+  <meta name="twitter:image" content="https://github.com/CEhresmann.png" /> <!-- GitHub profile picture -->
+  <meta name="twitter:url" content="https://github.com/CEhresmann" /> <!-- GitHub profile URL -->
+  <meta property="telegram:username" content="@moy1oldo1" /> <!-- Telegram username -->
 </head>
 <body>
+  <div class="container">
+    <div class="photo-container">
+      <img src="photo2.jpg" alt="Your Name" class="photo">
+    </div>
+    <div class="text-container">
   <h1>Трубинов Тимофей Сергеевич</h1>
   <p class="contact-info">Контактная информация:</p>
   <ul>
     <li>Телефон: +79529905973</li>
     <li>Email: trubinov04@gmail.com</li>
-    <li>GitHub: https://github.com/CEhresmann</li>
+    <li><a href="https://github.com/CEhresmann" target="_blank">GitHub: CEhresmann</a></li>
+    <li><a href="https://t.me/moy1oldo1" target="_blank">Telegram: @moy1oldo1</a></li>
     <li>Местоположение: Калининградская обл., Калининград</li>
   </ul>
+
+  <div class="separator"></div>
 
   <h2>Навыки</h2>
   <ul>
@@ -103,6 +43,8 @@
     <li>Коммуникабельность</li>
   </ul>
 
+  <div class="separator"></div>
+
   <div class="work-experience">
     <h2>Опыт работы</h2>
     <ul>
@@ -112,25 +54,30 @@
         <ul>
           <li>Обслуживание сервера</li>
           <li>Работа с 1С и настройка</li>
-          <li>Обслуживание рабочей техники</li>
+          <li>Обслуживание сети</li>
+          <li>Установка и настройка программного обеспечения</li>
         </ul>
       </li>
     </ul>
   </div>
 
+  <div class="separator"></div>
+
   <div class="education">
     <h2>Образование</h2>
     <ul>
       <li>
-        <h3>БФУ им. И. Канта, Калининград – бакалавриат, 3 курс, 2022-2026</h3>
+        <h3>Балтийский федеральный университет имени Иммануила Канта, г. Калининград – бакалавриат</h3>
+        <p>2022 – 2026</p>
       </li>
     </ul>
   </div>
 
+  <div class="separator"></div>
+
   <div class="literature-and-courses">
     <h2>Литература и курсы</h2>
     <ul>
-      <li>Продвинутые алгоритмы и структуры данных, Марчелло Ла Рокка</li>
       <li>Язык программирования Go, Б. Керниган, Алан О.Донован</li>
       <li>Язык программирования Си, Б. Керниган, Денис Ритчи</li>
       <li>Теоритический минимум по computer scince (сети, криптография и data science), Владстон Ф.Фило</li>
