--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Резюме</title>
-  <link rel="stylesheet" href="style.css"> <!-- link to the provided CSS file -->
+  <link rel="stylesheet" href="styles/style.css"> <!-- link to the provided CSS file -->
   <meta property="og:title" content="Трубинов Тимофей Сергеевич" />
   <meta property="og:description" content="Контактная информация:" />
   <meta property="og:image" content="https://github.com/CEhresmann.png" /> <!-- GitHub profile picture -->
@@ -17,7 +17,7 @@
 <body>
   <div class="container">
     <div class="photo-container">
-      <img src="photo2.jpg" alt="Your Name" class="photo">
+      <img src="photo/photo2.jpg" alt="Your Name" class="photo">
     </div>
     <div class="text-container">
   <h1>Трубинов Тимофей Сергеевич</h1>
