--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html>
 <head>
   <title>Резюме</title>
-  <link rel="stylesheet" href="styles/style.css"> <!-- link to the provided CSS file -->
+  <link rel="stylesheet" href="styles/style.css"> 
   <meta property="og:title" content="Трубинов Тимофей Сергеевич" />
+  <meta name="email" content="trubinov04@gmail.com">
   <meta property="og:description" content="Контактная информация:" />
-  <meta property="og:image" content="https://github.com/CEhresmann.png" /> <!-- GitHub profile picture -->
-  <meta property="og:url" content="https://github.com/CEhresmann" /> <!-- GitHub profile URL -->
+  <meta property="og:image" content="https://github.com/CEhresmann.png" /> 
+  <meta property="og:url" content="https://github.com/CEhresmann" /> 
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Трубинов Тимофей Сергеевич" />
   <meta name="twitter:description" content="Контактная информация:" />
-  <meta name="twitter:image" content="https://github.com/CEhresmann.png" /> <!-- GitHub profile picture -->
-  <meta name="twitter:url" content="https://github.com/CEhresmann" /> <!-- GitHub profile URL -->
-  <meta property="telegram:username" content="@moy1oldo1" /> <!-- Telegram username -->
+  <meta name="twitter:image" content="https://github.com/CEhresmann.png" /> 
+  <meta name="twitter:url" content="https://github.com/CEhresmann" />
+  <meta property="telegram:username" content="@moy1oldo1" /> 
 </head>
 <body>
   <div class="container">
@@ -24,7 +25,7 @@
   <p class="contact-info">Контактная информация:</p>
   <ul>
     <li>Телефон: +79529905973</li>
-    <li>Email: trubinov04@gmail.com</li>
+    <li><a href="mailto:trubinov04@gmail.com" target="_blank">Email: trubinov04@gmail.com</a></li>
     <li><a href="https://github.com/CEhresmann" target="_blank">GitHub: CEhresmann</a></li>
     <li><a href="https://t.me/moy1oldo1" target="_blank">Telegram: @moy1oldo1</a></li>
     <li>Местоположение: Калининградская обл., Калининград</li>
